--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,48 @@
-# backend/Dockerfile
-FROM python:3.11-slim
+ARG PYTHON_VERSION=3.11
+FROM python:${PYTHON_VERSION}-slim as base
+
+# Prevents Python from writing pyc files.
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# Keeps Python from buffering stdout and stderr to avoid situations where
+# the application crashes without emitting any logs due to buffering.
 ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
-COPY requirements.txt /app/
-RUN pip install -r requirements.txt
-COPY . /app/
+
+# Install dependencies including ffmpeg
+RUN apt-get update && apt-get install -y ffmpeg && apt-get clean
+
+# Create a non-privileged user that the app will run under.
+# See https://docs.docker.com/go/dockerfile-user-best-practices/
+ARG UID=10001
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/home/appuser" \
+    --shell "/sbin/nologin" \
+    --uid "${UID}" \
+    appuser
+
+# Download dependencies as a separate step to take advantage of Docker's caching.
+# Leverage a cache mount to /root/.cache/pip to speed up subsequent builds.
+# Leverage a bind mount to requirements.txt to avoid having to copy them into
+# into this layer.
+RUN --mount=type=cache,target=/root/.cache/pip \
+    --mount=type=bind,source=requirements.txt,target=requirements.txt \
+    python -m pip install -r requirements.txt
+
+COPY . .
+
+# Ensure the media and whisper model directories exist and have the correct permissions
+RUN mkdir -p /app/media/voices /app/media/videos /app/whisper_models /home/appuser \
+    && chown -R appuser:appuser /app/media /app/whisper_models /home/appuser
+
+# Set the WHISPER_HOME environment variable to a directory with appropriate permissions
+ENV WHISPER_HOME=/app/whisper_models
+
+USER appuser
+
+EXPOSE 8000
+
+CMD ["uvicorn", "config.asgi:application", "--host", "0.0.0.0", "--port", "8000"]
