--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,88 @@ Django==5.0.4
 djangorestframework>=3.13,<4.0
 psycopg2-binary==2.9.9
 django-cors-headers>=4.3.1
+uvicorn
+python-decouple
+django-allauth
+dj_rest_auth
+openai-whisper
+openai
+dj_database_url
+
+
+
+# annotated-types==0.7.0
+# anyio==4.4.0
+# appnope==0.1.4
+# asgiref==3.8.1
+# asttokens==2.4.1
+# certifi==2024.6.2
+# charset-normalizer==3.3.2
+# comm==0.2.2
+# debugpy==1.8.1
+# decorator==5.1.1
+# distro==1.9.0
+# dj-rest-auth==6.0.0
+# Django==5.0.4
+# django-allauth==0.63.3
+# django-cors-headers==4.3.1
+# djangorestframework==3.15.1
+# executing==2.0.1
+# filelock==3.15.1
+# fsspec==2024.6.0
+# h11==0.14.0
+# httpcore==1.0.5
+# httpx==0.27.0
+# idna==3.7
+# ipykernel==6.29.4
+# ipython==8.25.0
+# jedi==0.19.1
+# Jinja2==3.1.4
+# jupyter_client==8.6.2
+# jupyter_core==5.7.2
+# llvmlite==0.43.0
+# MarkupSafe==2.1.5
+# matplotlib-inline==0.1.7
+# more-itertools==10.3.0
+# mpmath==1.3.0
+# nest-asyncio==1.6.0
+# networkx==3.3
+# numba==0.60.0
+# numpy==1.26.4
+# openai==1.34.0
+# openai-whisper @ git+https://github.com/openai/whisper.git@ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab
+# packaging==24.1
+# parso==0.8.4
+# pexpect==4.9.0
+# platformdirs==4.2.2
+# prompt_toolkit==3.0.47
+# psutil==5.9.8
+# psycopg2-binary==2.9.9
+# ptyprocess==0.7.0
+# pure-eval==0.2.2
+# pydantic==2.7.4
+# pydantic_core==2.18.4
+# Pygments==2.18.0
+# python-dateutil==2.9.0.post0
+# python-decouple==3.8
+python-dotenv==1.0.1
+# pyzmq==26.0.3
+# regex==2024.5.15
+requests==2.32.3
+# six==1.16.0
+# sniffio==1.3.1
+# sqlparse==0.5.0
+# stack-data==0.6.3
+# sympy==1.12.1
+# tiktoken==0.7.0
+# torch==2.3.1
+# tornado==6.4.1
+# tqdm==4.66.4
+# traitlets==5.14.3
+# typing_extensions==4.12.2
+# urllib3==2.2.1
+# wcwidth==0.2.13
+
 # arize-phoenix==3.24.0
 # daphne==4.1.2
 # Django==5.0.4
